--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: [2.7, 3.8]
+        python-version: [2.7, 3.8, 3.9]
         imp-branch: [main, develop]
+        exclude:
+          - python-version: 3.8
+            imp-branch: develop
+          - python-version: 3.9
+            imp-branch: main
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -28,8 +33,9 @@ jobs:
       env:
         KEY_MODELLER: ${{ secrets.KEY_MODELLER }}
       run: |
-        support/setup_travis.sh ~/conda ${{ matrix.imp-branch }} ${{ matrix.python-version }}
+        support/setup_travis.sh ${{ matrix.imp-branch }} ${{ matrix.python-version }}
     - name: Test
       run: |
-        source ~/conda/bin/activate python${{ matrix.python-version }}
+        eval "$(conda shell.bash hook)"
+        conda activate python${{ matrix.python-version }}
         nosetests --exe support/test
