--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       env:
         KEY_MODELLER: ${{ secrets.KEY_MODELLER }}
       run: |
-        support/setup_travis.sh ${{ matrix.imp-branch }} ${{ matrix.python-version }}
+        support/setup_ci.sh ${{ matrix.imp-branch }} ${{ matrix.python-version }}
     - name: Test
       run: |
         eval "$(conda shell.bash hook)"
